--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <main>
       <h1>Home page</h1>
       <h2>This is a test message!</h2>
+      <h3>This is another message!</h3>
+      <h4>And this is another message!</h4>
     </main>
   </body>
 </html>
