--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <a href="index.html" aria-current="page">Home</a>
+      <a href="page2.html">Other page</a>
     </nav>
     <main>
       <h1>Home page</h1>
