--- a/page2.html
+++ b/page2.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
+      <a href="index.html">Home</a>
+      <a href="page2.html" aria-current="page">Other page</a>
     </nav>
     <main>
       <h1>My other page</h1>
