--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="page2.html">Other page</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1 text-align="center">Home page</h1>
     </main>
   </body>
 </html>
