Update main HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <a href="page2.html">Other page</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1>Snake Online</h1>
+      <h2>Play Snake online on your computer!</h2>
     </main>
   </body>
 </html>
