--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="index style.css"/>
+    <script src="load script.js"></script>
   </head>
   <body>
     <nav>
       <a href="index.html" aria-current="page">Home</a>
-      <a href="page2.html">Other page</a>
+      <a href="snake.html">Play Snake!</a>
     </nav>
     <main>
       <h1>Snake Online</h1>
