--- a/snake.html
+++ b/snake.html
@@ -19,7 +19,7 @@
     border: 1px solid white;
   }
 
-  .Page title {
+  #Page title {
     font-weight: bold;
     font-size: 1.5rem;
     color: white;
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1 id="Page title">Snake Online: Game</h1>
+  <h1 class="Page title">Snake Online: Game</h1>
 <canvas width="400" height="400" id="game"></canvas>
 <script>
 var canvas = document.getElementById('game');
