--- a/snake_difficulty select.html
+++ b/snake_difficulty select.html
@@ -5,12 +5,12 @@
     <title>Snake Online: Difficulty</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <nav>
       <a href="index.html">Home</a>
-      <a href="page2.html" aria-current="page">Other page</a>
+      <a href="snake_difficulty select.html" aria-current="page">Play Snake!</a>
     </nav>
     <main>
       <h1>Choose your difficulty!</h1>
