--- a/snake_difficulty select.html
+++ b/snake_difficulty select.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="difficulty select style.css"/>
-    <title>Snake Online: Difficulty</title>
+    <title>Snake Online: Difficulty select</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <script src="script.js"></script>
