Test adding buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </nav>
     <main>
       <h1>Snake Online</h1>
-      <h2>Play Snake online on your computer!</h2>
+      <div id="Main text">
+        <h2>Play Snake online on your computer!</h2>
+        Use the Arrow Keys to move the snake around!
+        Don't worry, the walls will not kill you!
+        <a href="snake_difficulty select.html">Play Snake!</a>
+      </div>
     </main>
   </body>
 </html>
