--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </nav>
     <main>
       <h1>Snake Online</h1>
-      <div id="Main text">
+      <div id="Main_text">
         <h2>Play Snake online on your computer!</h2>
         Use the Arrow Keys to move the snake around!
         Don't worry, the walls will not kill you!
-        <a href="snake_difficulty select.html">Play Snake!</a>
+        <a id="Difficulty_select_button" href="snake_difficulty select.html">Play Snake!</a>
       </div>
     </main>
   </body>
