--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Play Snake online on your computer!</h2>
         Use the Arrow Keys to move the snake around!
         Don't worry, the walls will not kill you!
-        <a id="Difficulty_select_button" href="snake_difficulty select.html">Play Snake!</a>
+        <button onclick="document.location='snake_difficulty select.html'"></button>
       </div>
     </main>
   </body>
