--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <h1>Snake Online</h1>
       <div id="Main_text">
         <h2>Play Snake online on your computer!</h2>
-        <pre>Use the Arrow Keys to move the snake around!
-        Don't worry, the walls will not kill you!</pre>
+        <pre>
+        Use the Arrow Keys to move the snake around!
+        Don't worry, the walls will not kill you!
+      </pre>
         <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty select.html'">Play Snake!</button>
       </div>
     </main>
