--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Snake Online</h1>
       <div id="Main_text">
         <h2>Play Snake online on your computer!</h2>
-        <pre>
+        <pre id="Main_text">
         Use the Arrow Keys to move the snake around!
         Don't worry, the walls will not kill you!
       </pre>
