--- a/snake_difficulty select.html
+++ b/snake_difficulty select.html
@@ -5,7 +5,7 @@
     <title>Snake Online: Difficulty select</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="script.js"></script>
+    <script src="load script.js"></script>
   </head>
   <body>
     <nav>
