--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <div id="Main_text">
         <h2>Play Snake online on your computer!</h2>
         <pre id="Main_text">
-        Use the Arrow Keys to move the snake around!
-        Don't worry, the walls will not kill you!
-      </pre>
+        <h3>Use the Arrow Keys to move the snake around!</h3>
+        <h3>Don't worry, the walls will not kill you!</h3>
         <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty select.html'">Play Snake!</button>
       </div>
     </main>
