--- a/snake_difficulty select.html
+++ b/snake_difficulty select.html
@@ -14,6 +14,7 @@
     </nav>
     <main>
       <h1>Choose your difficulty!</h1>
+      <button type="button" id="Play_snake_button" onclick="document.location='gamemodes/snake_easy.html'">Easy</button>
     </main>
   </body>
 </html>
