--- a/snake_difficulty select.html
+++ b/snake_difficulty select.html
@@ -14,7 +14,9 @@
     </nav>
     <main>
       <h1>Choose your difficulty!</h1>
-      <button type="button" id="Play_snake_button" onclick="document.location='gamemodes/snake_easy.html'">Easy</button>
+      <div id="buttons">
+        <button type="button" id="snake-easy_play" onclick="document.location='gamemodes/snake_easy.html'">Easy</button>
+      </div>
     </main>
   </body>
 </html>
