--- a/snake.html
+++ b/snake.html
@@ -23,6 +23,7 @@
 <body>
 <canvas width="400" height="400" id="game"></canvas>
 <script>
+'use strict';
 var canvas = document.getElementById('game');
 var context = canvas.getContext('2d');
 
