--- a/test.html
+++ b/test.html
@@ -3,10 +3,12 @@
 <head>
   <title>Snake Online: Game</title>
   <style>
-  html, body {
+    /* Your CSS code */
+    html, body {
     height: 100%;
     margin: 0;
   }
+
   body {
     background: black;
     display: flex;
@@ -18,14 +20,14 @@
     border: 1px solid white;
   }
 
-  #score {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 18px;
-  }
+    #score {
+      position: absolute;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      font-size: 18px;
+    }
   </style>
 </head>
 <body>
@@ -47,94 +49,94 @@
 
     // The rest of your code...
     var canvas = document.getElementById('game');
-    var context = canvas.getContext('2d');
+var context = canvas.getContext('2d');
 
-    var grid = 16;
-    var count = 0;
+var grid = 16;
+var count = 0;
   
-    var snake = {
-        x: 160,
-        y: 160,
+var snake = {
+  x: 160,
+  y: 160,
   
-        // snake velocity. moves one grid length every frame in either the x or y direction
-        dx: grid,
-        dy: 0,
+  // snake velocity. moves one grid length every frame in either the x or y direction
+  dx: grid,
+  dy: 0,
   
-        // keep track of all grids the snake body occupies
-        cells: [],
+  // keep track of all grids the snake body occupies
+  cells: [],
   
-        // length of the snake. grows when eating an apple
-        maxCells: 4
-    };
-        var apple = {
-            x: 320,
-            y: 320
-        };
+  // length of the snake. grows when eating an apple
+  maxCells: 4
+};
+var apple = {
+  x: 320,
+  y: 320
+};
 
-    // get random whole numbers in a specific range
-    // @see https://stackoverflow.com/a/1527820/2124254
-    function getRandomInt(min, max) {
-        return Math.floor(Math.random() * (max - min)) + min;
-    }
+// get random whole numbers in a specific range
+// @see https://stackoverflow.com/a/1527820/2124254
+function getRandomInt(min, max) {
+  return Math.floor(Math.random() * (max - min)) + min;
+}
 
-    // game loop
-    function loop() {
-        requestAnimationFrame(loop);
+// game loop
+function loop() {
+  requestAnimationFrame(loop);
 
-    // slow game loop to 15 fps instead of 60 (60/15 = 4)
-    if (++count < 7) {
-        return;
-    }
+  // slow game loop to 15 fps instead of 60 (60/15 = 4)
+  if (++count < 7) {
+    return;
+  }
 
-    count = 0;
-    context.clearRect(0,0,canvas.width,canvas.height);
+  count = 0;
+  context.clearRect(0,0,canvas.width,canvas.height);
 
-    // move snake by it's velocity
-    snake.x += snake.dx;
-    snake.y += snake.dy;
+  // move snake by it's velocity
+  snake.x += snake.dx;
+  snake.y += snake.dy;
 
-    // wrap snake position horizontally on edge of screen
-    if (snake.x < 0) {
-        snake.x = canvas.width - grid;
-    }
-    else if (snake.x >= canvas.width) {
-        snake.x = 0;
-    }
+  // wrap snake position horizontally on edge of screen
+  if (snake.x < 0) {
+    snake.x = canvas.width - grid;
+  }
+  else if (snake.x >= canvas.width) {
+    snake.x = 0;
+  }
   
-    // wrap snake position vertically on edge of screen
-    if (snake.y < 0) {
-        snake.y = canvas.height - grid;
-    }
-    else if (snake.y >= canvas.height) {
-        snake.y = 0;
-    }
+  // wrap snake position vertically on edge of screen
+  if (snake.y < 0) {
+    snake.y = canvas.height - grid;
+  }
+  else if (snake.y >= canvas.height) {
+    snake.y = 0;
+  }
 
-    // keep track of where snake has been. front of the array is always the head
-    snake.cells.unshift({x: snake.x, y: snake.y});
+  // keep track of where snake has been. front of the array is always the head
+  snake.cells.unshift({x: snake.x, y: snake.y});
 
-    // remove cells as we move away from them
-    if (snake.cells.length > snake.maxCells) {
-        snake.cells.pop();
-    }
+  // remove cells as we move away from them
+  if (snake.cells.length > snake.maxCells) {
+    snake.cells.pop();
+  }
 
-    // draw apple
-    context.fillStyle = 'red';
-    context.fillRect(apple.x, apple.y, grid-1, grid-1);
+  // draw apple
+  context.fillStyle = 'red';
+  context.fillRect(apple.x, apple.y, grid-1, grid-1);
 
-    // draw snake one cell at a time
-    context.fillStyle = 'green';
-    snake.cells.forEach(function(cell, index) {
+  // draw snake one cell at a time
+  context.fillStyle = 'green';
+  snake.cells.forEach(function(cell, index) {
     
-        // drawing 1 px smaller than the grid creates a grid effect in the snake body so you can see how long it is
-        context.fillRect(cell.x, cell.y, grid-1, grid-1);  
+    // drawing 1 px smaller than the grid creates a grid effect in the snake body so you can see how long it is
+    context.fillRect(cell.x, cell.y, grid-1, grid-1);  
 
-        // snake ate apple
-        if (cell.x === apple.x && cell.y === apple.y) {
-        snake.maxCells++;
+    // snake ate apple
+    if (cell.x === apple.x && cell.y === apple.y) {
+      snake.maxCells++;
 
-        // canvas is 400x400 which is 25x25 grids 
-        apple.x = getRandomInt(0, 25) * grid;
-        apple.y = getRandomInt(0, 25) * grid;
+      // canvas is 400x400 which is 25x25 grids 
+      apple.x = getRandomInt(0, 25) * grid;
+      apple.y = getRandomInt(0, 25) * grid;
     }
 
     // check collision with all cells after this one (modified bubble sort)
