--- a/update-test.html
+++ b/update-test.html
@@ -26,6 +26,7 @@
     transform: translateX(-50%);
     color: white;
     font-size: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   #game-over {
@@ -37,6 +38,7 @@
     color: white;
     font-size: 24px;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   </style>
 </head>
