--- a/update-test.html
+++ b/update-test.html
@@ -26,7 +26,6 @@
     transform: translateX(-50%);
     color: white;
     font-size: 18px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   #game-over {
@@ -38,7 +37,6 @@
     color: white;
     font-size: 24px;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   </style>
 </head>
@@ -118,8 +116,13 @@
     context.fillStyle = 'red';
     context.fillRect(apple.x, apple.y, grid-1, grid-1);
 
-    context.fillStyle = 'green';
     snake.cells.forEach(function(cell, index) {
+      // If it's the head of the snake
+      if (index === 0) {
+        context.fillStyle = 'orange';
+      } else {
+        context.fillStyle = 'green';
+      }
       context.fillRect(cell.x, cell.y, grid-1, grid-1);  
 
       if (cell.x === apple.x && cell.y === apple.y) {
