--- a/test/test.html
+++ b/test/test.html
@@ -185,7 +185,7 @@
   });
 
   document.getElementById('home-btn').addEventListener('click', function() {
-    window.location.href = 'index.html';
+    window.location.href = '../index.html';
   });
 
   document.getElementById('start-screen').style.display = 'block';
