--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <a href="index.html" aria-current="page">Home</a>
-      <a href="snake_difficulty select.html">Play Snake!</a>
+      <a href="snake_difficulty-select.html">Play Snake!</a>
     </nav>
     <main>
       <h1>Snake Online</h1>
