--- a/index.html
+++ b/index.html
@@ -1,83 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <link rel="stylesheet" href="index style.css"/> -->
-    <style>
-      * {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
-  text-align: center;
-}
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #000000;
-  background-color: #2b2b2b;
-}
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #000;
-}
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: rgb(0, 83, 135);
-}
-
-main {
-  padding: 1rem;
-}
-
-h1 {
-  font-weight: bold;
-  font-size: 2rem;
-  text-align: center;
-}
-
-h2 {
-  font-weight: bold;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-#Play_snake_button {
-  /* position: absolute; Remove this line */
-  align-self: center;
-  font-size: 5rem;
-  font-family: system-ui, sans-serif;
-  /* top: 50%; Remove this line */
-  /* transform: translateX(-50%); Remove this line */
-  margin-top: 20px; /* Add this line to create space above the button */
-}
-
-#Main_text {
-  margin: 0;
-  justify-content: center;
-  display: inline-block;
-  align-items: center;
-  text-align: center;
-  font-family: system-ui, sans-serif;
-  /* position: relative; Remove this line */
-}
-    </style>
+    <link rel="stylesheet" href="index style.css"/>
     <title>Snake Online: Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
