--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="index style.css"/>
+    <link rel="stylesheet" href="index style.css?v=1.1"/>
     <title>Snake Online: Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
