--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Snake Online: Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="load script.js"></script>
+    <script src="load-script.js"></script>
   </head>
   <body>
     <nav>
