--- a/test/test.html
+++ b/test/test.html
@@ -25,7 +25,8 @@
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    font-size: 18px;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   #game-over, #start-screen {
@@ -37,6 +38,7 @@
     color: white;
     font-size: 24px;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   button {
@@ -49,6 +51,7 @@
 <body>
 <div id="start-screen">
   <p id="start-text">Welcome to the Snake Game!</p>
+  <h1 id="difficulty-text">Difficulty: setDiff</h1>
   <button id="start-btn">Start Game</button>
 </div>
 <div id="score">Score: 0</div>
