--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Play Snake online on your computer!</h2>
         <h3>Use the Arrow Keys to move the snake around!</h3>
         <h3>Don't worry, the walls will not kill you!</h3>
-        <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty select.html'">Play Snake!</button>
+        <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty-select.html'">Play Snake!</button>
       </div>
     </main>
   </body>
