--- a/snake_difficulty-select.html
+++ b/snake_difficulty-select.html
@@ -16,6 +16,9 @@
       <h1>Choose your difficulty!</h1>
       <div id="buttons">
         <button type="button" id="snake-easy_play" onclick="document.location='gamemodes/snake_easy.html'">Easy</button>
+        <button type="button" id="snake-medium_play" onclick="document.location='gamemodes/snake_medium.html'">Medium</button>
+        <button type="button" id="snake-hard_play" onclick="document.location='gamemodes/snake_hard.html'">Hard</button>
+        <button type="button" id="snake-extreme_play" onclick="document.location='gamemodes/snake_extreme.html'">Extreme</button>
       </div>
     </main>
   </body>
