--- a/snake_difficulty-select.html
+++ b/snake_difficulty-select.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="difficulty select style.css"/>
+    <link rel="stylesheet" href="difficulty select style.css?v=1.1"/>
     <title>Snake Online: Difficulty select</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
