--- a/test/test.html
+++ b/test/test.html
@@ -25,7 +25,7 @@
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    font-size: 20px;
+    font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
@@ -51,7 +51,7 @@
 <body>
 <div id="start-screen">
   <p id="start-text">Welcome to the Snake Game!</p>
-  <h1 id="difficulty-text">Difficulty: setDiff</h1>
+  <p id="difficulty-text">Difficulty: setDiff</p>
   <button id="start-btn">Start Game</button>
 </div>
 <div id="score">Score: 0</div>
