--- a/gamemodes/snake_hard.html
+++ b/gamemodes/snake_hard.html
@@ -2,51 +2,7 @@
 <html>
 <head>
   <title>Snake Online: Playing hard</title>
-  <style>
-  html, body {
-    height: 100%;
-    margin: 0;
-  }
-
-  body {
-    background: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  canvas {
-    border: 2px solid white;
-  }
-
-  #score {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-  #game-over, #start-screen {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 24px;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-  button {
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 20px;
-  }
-  </style>
+  <link rel="stylesheet" href="snake-styles.css?v=1.1"/>
 </head>
 <body>
 <div id="start-screen">
