add footer to all main pages; remove unnecessary forwards

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <nav>
-      <a href="index.html" aria-current="page">Home</a>
-      <a href="snake_difficulty-select.html">Play Snake!</a>
+      <a href="index" aria-current="page">Home</a>
+      <a href="snake_difficulty-select">Play Snake!</a>
     </nav>
     <main>
       <h1>Snake Online</h1>
@@ -18,8 +18,12 @@
         <h2>Play Snake online on your computer!</h2>
         <h3>Use the Arrow Keys to move the snake around!</h3>
         <h3>Don't worry, the walls will not kill you!</h3>
-        <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty-select.html'">Play Snake!</button>
+        <h4>The game is still being made ready for mobile devices!</h4>
+        <button type="button" id="Play_snake_button" onclick="document.location='snake_difficulty-select'">Play Snake!</button>
       </div>
     </main>
+    <footer>
+      <p>Created by <mark>svenwlive</mark></p>
+    </footer>
   </body>
 </html>
