--- a/snake_difficulty-select.html
+++ b/snake_difficulty-select.html
@@ -9,17 +9,20 @@
   </head>
   <body>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="snake_difficulty-select.html" aria-current="page">Play Snake!</a>
+      <a href="index">Home</a>
+      <a href="snake_difficulty-select" aria-current="page">Play Snake!</a>
     </nav>
     <main>
       <h1>Choose your difficulty!</h1>
       <div id="buttons">
-        <button type="button" id="snake-easy_play" onclick="document.location='gamemodes/snake_easy.html'">Easy</button>
-        <button type="button" id="snake-medium_play" onclick="document.location='gamemodes/snake_medium.html'">Medium</button>
-        <button type="button" id="snake-hard_play" onclick="document.location='gamemodes/snake_hard.html'">Hard</button>
-        <button type="button" id="snake-extreme_play" onclick="document.location='gamemodes/snake_extreme.html'">Extreme</button>
+        <button type="button" id="snake-easy_play" onclick="document.location='gamemodes/snake_easy'">Easy</button>
+        <button type="button" id="snake-medium_play" onclick="document.location='gamemodes/snake_medium'">Medium</button>
+        <button type="button" id="snake-hard_play" onclick="document.location='gamemodes/snake_hard'">Hard</button>
+        <button type="button" id="snake-extreme_play" onclick="document.location='gamemodes/snake_extreme'">Extreme</button>
       </div>
     </main>
+    <footer>
+      <p>Created by <mark>svenwlive</mark></p>
+    </footer>
   </body>
 </html>
