--- a/mobile-test.html
+++ b/mobile-test.html
@@ -2,8 +2,18 @@
 <html>
 <head>
   <title>Snake Online: Playing easy</title>
-  <link rel="stylesheet" href="snake-styles.css?v=1.1"/>
+  <link rel="stylesheet" href="gamemodes/snake-styles.css"/>
   <link rel="icon" type="image/x-icon" href="/favicon.jpg"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    #controls {
+      text-align: center; /* Center the buttons horizontally */
+      margin-top: 20px; /* Add some space between the game and buttons */
+    }
+    button {
+      margin: 5px; /* Add spacing between buttons */
+    }
+  </style>
 </head>
 <body>
 <div id="start-screen">
@@ -19,29 +29,18 @@
   <button id="play-again-btn">Play Again</button>
   <button id="home-btn">Home</button>
 </div>
+<!-- ... (existing HTML code) ... -->
+
+<div id="controls">
+  <button id="up-btn">Up</button>
+  <button id="down-btn">Down</button>
+  <button id="left-btn">Left</button>
+  <button id="right-btn">Right</button>
+</div>
+
 <script>
+  // ... (existing JavaScript code) ...
   'use strict';
-
-  // COPY LINES 25 to 44 TO OTHER GAME PAGES
-  // Storing user's device details in a variable
-  let details = navigator.userAgent;
-
-  // Creating a regular expression containing some mobile devices keywords
-  let regexp = /android|iphone|kindle|ipad/i;
-
-  // Testing if the user agent string matches any mobile device
-  let isMobileDevice = regexp.test(details);
-
-  if (isMobileDevice) {
-    console.log("You are using a Mobile Device");
-    console.log("Game will not run here :(")
-    console.log("Redirecting...")
-    window.location.href = '../mobile-device' // Redirect mobile user to mobile error page
-  } else {
-    console.log("You are using Desktop!");
-    console.log("Game will continue running :)")
-  }
-  // COPY LINES 25 to 44 TO OTHER GAME PAGES
 
   var canvas = document.getElementById('game');
   var context = canvas.getContext('2d');
@@ -139,6 +138,24 @@
     });
   }
 
+  // Add touch event listeners for directional controls
+  document.getElementById('up-btn').addEventListener('click', () => {
+    snake.dx = 0;
+    snake.dy = -grid;
+  });
+  document.getElementById('down-btn').addEventListener('click', () => {
+    snake.dx = 0;
+    snake.dy = grid;
+  });
+  document.getElementById('left-btn').addEventListener('click', () => {
+    snake.dx = -grid;
+    snake.dy = 0;
+  });
+  document.getElementById('right-btn').addEventListener('click', () => {
+    snake.dx = grid;
+    snake.dy = 0;
+  });
+
   document.addEventListener('keydown', function(e) {
     if (e.which === 37 && snake.dx === 0) {
       snake.dx = -grid;
@@ -169,7 +186,7 @@
   });
 
   document.getElementById('home-btn').addEventListener('click', function() {
-    window.location.href = '../';
+    window.location.href = '../index.html';
   });
 
   document.getElementById('start-screen').style.display = 'block';
