Update to navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav>
-      <a href="/" aria-current="page">home</a>
+      <a href="index" aria-current="page">home</a>
       <a href="snake_difficulty-select">play Snake!</a>
     </nav>
     <main>
