--- a/snake_difficulty-select.html
+++ b/snake_difficulty-select.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">home</a>
+      <a href="index">home</a>
       <a href="snake_difficulty-select" aria-current="page">play Snake!</a>
     </nav>
     <main>
